--- a/realfood.html
+++ b/realfood.html
@@ -221,7 +221,7 @@
         <div class="ảnh2">
             <img src="khaosat7.png" alt="khaosat">
         </div>
-        <divc class="tq1">
+        <div class="tq1">
             <h2>Thói quen</h2>
             <p>Kết quả khảo sát cho thấy khi phải lựa chọn giữa một món ăn rõ nguồn gốc và một món ăn sạch nhưng không quá ngon, 
                 57.4% học sinh ưu tiên thực phẩm có nguồn gốc rõ ràng, trong khi 42.6% sẵn sàng chọn thực phẩm an toàn dù không ngon miệng. 
